# fingerprint_orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: cli.py  main.py
app/api/: routes_register.py  routes_verify.py
app/clients/: db_client.py  minio_client.py
app/core/: config.py  constants.py  crypto_utils.py  exceptions.py
app/db/: database.py
app/managers/: worker_manager.py
app/models/: fingerprint.py  task.py  worker.py
app/mqtt/: broker.py  handlers.py  publisher.py
app/repositories/: fingerprint_repo.py  storage_repo.py  user_repo.py
app/routes/: api.py  fingerprints.py  health.py  models.py  register.py  sync.py  users.py  verify.py
app/schemas/: __init__.py  api_models.py  mqtt_payloads.py  payload.py  requests.py  responses.py
app/services/: registration_service.py  task_service.py  verification_service.py  worker_service.py
app/workflows/: registration.py  verification.py
scripts/: setup_orchestrator_env.sh
